2008-01-13  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/pbutils.override:
	Finish wrapping gst.pbutils by adding install_plugins_async()

2008-01-11  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/Makefile.am:
	gst.pbutils also needs to handle miniobjects
	* gst/pbutils.defs:
	Add new InstallPluginsContext boxed definition.
	All the *_new() functions should be accessible (and not act as
	constructors).
	* gst/pbutils.override:
	Add override for install_plugins_sync().
	* gst/pbutilsmodule.c:
	Add pygst_debug debug category in this module too.
	* testsuite/test_pbutils.py:
	Test existence of new API. Needs more tests.

2008-01-10  Sebastian Dröge  <slomo@circular-chaos.org>

	* autogen.sh:
	  Add -Wno-portability to the automake parameters to stop warnings
	  about GNU make extensions being used. We require GNU make in almost
	  every Makefile anyway.

	* configure.ac:
	  Check for a working C compiler with AC_PROG_CC.

	  Use AM_PROG_CC_C_O as a compiler that accepts both -c and -o
	  at the same time is required for per target flags.

2008-01-01  Edward Hervey  <edward.hervey@collabora.co.uk>

	* gst/Makefile.am:
	* gst/common.h:
	* gst/pbutils.defs:
	* gst/pbutils.override:
	* gst/pbutilsmodule.c: (initpbutils):
	new gst.pbutils module that wraps the gst-plugins-base pbutils
	helper library.
	* testsuite/Makefile.am:
	* testsuite/common.py:
	* testsuite/test_pbutils.py:
	Test case for gst.pbutils
	Fixes #472822

2007-12-18  Andy Wingo  <wingo@pobox.com>

	* examples/switch.py: New file, a basic demo for a single-stream
	switcher. Could be expanded later -- look at
	flumotion.component.combiners.switch.switch for some inspiration.

2007-12-18  Tim-Philipp Müller  <tim at centricular dot net>

	* Makefile.am:
	  Include common/win32.mak for CRLF check of win32 project
	  files (see #393626).

	* win32/vs6/gst_python.dsw:
	* win32/vs6/libgstpython.dsp:
	* win32/vs6/pygenfiles.dsp:
	  Fix line endings and do cvs admin -kb.
